# parallel_drive_unit_ctrl

./: CMakeLists.txt  README.md
config/: parallel_drive_unit.ini
include/pdu/: config.hpp  kinematics.hpp  mock_motor_backend.hpp  motor_backend.hpp  parallel_drive_unit.hpp  types.hpp  vendor_sdk_backend.hpp
src/: backend_factory.cpp  config.cpp  kinematics.cpp  main.cpp  mock_motor_backend.cpp  parallel_drive_unit.cpp  vendor_sdk_backend.cpp
tests/: parallel_drive_tests.cpp
